--- a/app/src/paid/res/values/strings.xml
+++ b/app/src/paid/res/values/strings.xml
@@ -1,6 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">Build it Bigger</string>
     <string name="instructions">Press the button for a paid delicious joke!</string>
 
 </resources>
